--- a/css/login.css
+++ b/css/login.css
@@ -1,29 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
-
-body{
-    font-family: 'Balsamiq Sans', cursive;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #333333;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.43;
+  background-color: #fafafa;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  height: 100%;
+  line-height: 1;
+  font-size: 16px;
+  box-sizing: border-box;
 }
-
-.image{
-    margin-top: 5rem;
-    margin-bottom: 3rem;
-    display: flex;
-    justify-content: center;
+div {
+  margin-bottom: 16px;
 }
-
-
-
-.login{
-    width: 20rem;
-    display: flex;
-    justify-content: center;
+img {
+  margin-top: 5rem;
+  margin-bottom: 3rem;
+  display: flex;
+  justify-content: center;
 }
-
-.login-section{
-    width: 100%;
+.login {
+  width: 20rem;
+  display: flex;
+  justify-content: center;
 }
-
-input{
-    width: 100%;
-    height: 2rem;
+.login-section {
+  width: 100%;
+}
+input {
+  width: 100%;
+  height: 2rem;
+}
+a {
+  text-decoration: none;
+}
+button {
+  background-color: #21a696;
+  color: #fff;
+  width: 100%;
+  height: 48px;
+  font-weight: bold;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  padding: 6px 16px;
+  font-size: 0.875rem;
+  min-width: 64px;
+  box-sizing: border-box;
+  font-family: inherit;
+  line-height: 1.75;
+  border-radius: 4px;
+  text-transform: uppercase;
+  border: 0;
+  cursor: pointer;
+  display: inline-flex;
+  position: relative;
+  align-items: center;
+  vertical-align: middle;
+  justify-content: center;
+}
+button:hover {
+  background-color: #0f5e54;
 }
