--- a/css/login.css
+++ b/css/login.css
@@ -1,45 +1,87 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  color: #333333;
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.43;
-  background-color: #fafafa;
+header {
+  display: none;
+}
+#loginSite {
+  font: inherit;
   border: 0;
   margin: 0;
   padding: 0;
-  font-size: 100%;
+  font-size: 16px;
   vertical-align: baseline;
   height: 100%;
   line-height: 1;
-  font-size: 16px;
-  box-sizing: border-box;
+  overflow: visible;
+  width: 100%;
+  flex-grow: 1;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
 }
-div {
+#loginSite .login {
+  min-height: 95vh;
+  margin-bottom: 16px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  place-content: stretch center;
+  overflow: visible;
+}
+#loginSite .login .image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 170px;
+  margin-top: 32px;
+  text-align: center;
+  margin-bottom: 32px;
+}
+#loginSite .login .image img {
+  height: 32px;
+  width: 32px;
+}
+#loginSite .login .login-section {
+  max-width: 350px;
+  position: relative;
+  width: initial;
+  opacity: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: stretch;
+  place-content: stretch flex-start;
+  overflow: visible;
+  flex-grow: 1;
+  width: 100%;
+}
+#loginSite .login h1 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.75rem;
+  color: #333333;
+  margin-bottom: 24px;
+}
+#loginSite .login label {
+  color: rgba(0, 0, 0, 0.54);
+  padding: 0;
+  font-size: 1rem;
+  font-family: inherit;
+  font-weight: 400;
+}
+#loginSite .login input {
+  width: 100%;
+  height: 3rem;
+  box-sizing: border-box;
+  padding: 18.5px 14px;
   margin-bottom: 16px;
 }
-img {
-  margin-top: 5rem;
-  margin-bottom: 3rem;
-  display: flex;
-  justify-content: center;
+#loginSite .login #passwordForget {
+  margin-bottom: 16px;
 }
-.login {
-  width: 20rem;
-  display: flex;
-  justify-content: center;
-}
-.login-section {
-  width: 100%;
-}
-input {
-  width: 100%;
-  height: 2rem;
-}
-a {
+#loginSite .login a {
   text-decoration: none;
+  margin-bottom: 16px;
 }
-button {
+#loginSite .login button {
   background-color: #21a696;
   color: #fff;
   width: 100%;
@@ -61,7 +103,20 @@ button {
   align-items: center;
   vertical-align: middle;
   justify-content: center;
+  margin-bottom: 16px;
 }
-button:hover {
-  background-color: #0f5e54;
+#loginSite .login button:hover {
+  background-color: #177469;
+}
+#loginSite .picture {
+  max-width: 50%;
+  background: url(images/tennis-img.jpg) 70% 0;
+  background-size: cover;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  place-content: stretch flex-start;
+  height: 758px;
+  width: 695px;
+  flex-grow: 0;
 }
