--- a/css/settings.css
+++ b/css/settings.css
@@ -1,35 +1,64 @@
-body {
+#settingCSS {
   margin-left: 25%;
   margin-right: 25%;
 }
-body h2 {
+#settingCSS h2 {
   margin: 5px inherit;
   text-align: center;
 }
-body h3 {
+#settingCSS h3 {
   font-size: 1.5rem;
-  text-align: center;
+  text-align: left;
 }
-body form {
+#settingCSS div {
   margin-bottom: 2rem;
   padding-bottom: 2rem;
-  border-bottom: 1px solid gray;
 }
-body form label {
+#settingCSS div label {
   font-weight: 500;
+  font-size: 1rem;
 }
-body form input,
-body form select {
+#settingCSS div input,
+#settingCSS div select {
   border: 1px solid #cccccc;
   border-radius: 5px;
 }
-body form input:not(:last-of-type),
-body form select {
+#settingCSS div input,
+#settingCSS div select {
   margin-top: 0.3rem;
   margin-bottom: 1rem;
   padding: 0.5rem;
   width: 100%;
 }
-body form input:last-of-type {
+#settingCSS div select {
+  width: 103%;
+}
+#settingCSS div button {
+  border: none;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
   padding: 0.7rem;
+  margin-top: 0.5rem;
+  background-color: #1865f2;
+  border-radius: 5px;
+}
+#settingCSS div button:hover {
+  cursor: pointer;
+  box-shadow: 0 0 0 1px #ffffff, 0 0 0 3px #1865f2;
+}
+#settingCSS div #pDeleteAccount {
+  border: none;
+  background-color: #d92916;
+}
+#settingCSS div #pDeleteAccount:hover {
+  box-shadow: 0 0 0 1px #ffffff, 0 0 0 3px #d92916;
+}
+#settingCSS div p {
+  font-size: 1rem;
+}
+#settingCSS .basics,
+#settingCSS .password,
+#settingCSS .role {
+  border-bottom: 1px solid gray;
 }
