--- a/css/less/login.less
+++ b/css/less/login.less
@@ -82,6 +82,7 @@ header{
                 box-sizing: border-box;
                 padding: 18.5px 14px;
                 margin-bottom: 16px;
+                border:1px solid grey;
             }
 
             #passwordForget{
