--- a/css/login.css
+++ b/css/login.css
@@ -73,6 +73,7 @@ header {
   box-sizing: border-box;
   padding: 18.5px 14px;
   margin-bottom: 16px;
+  border: 1px solid grey;
 }
 #loginSite .login #passwordForget {
   margin-bottom: 16px;
