--- a/css/less/index.less
+++ b/css/less/index.less
@@ -1,17 +1,62 @@
-@zeromargin: 0px;
-@borderColor: #000000;
-
-body {
-    div {
-        margin: 10px;
-        p {
-            border: 2px solid @borderColor;
+header{
+    
+    nav{
+        display: flex;
+        margin: 2rem 0;
+        height: 2rem;
+        flex-grow: 0;
+        justify-content: space-between;
+        background-color: darkgrey;
+        padding: 0.6rem;
+        img{
+            flex: 1;
+            transform: translate(5%, -33%);
+            height: fit-content;
         }
-        &:hover {
-            p {
-                border: 5px solid @borderColor;
+        .buttonBox{
+            flex: 9;
+            display: flex;
+            justify-content: flex-end;
+            button{
+                padding: 0.5em 1em;
+                margin-left: 1rem;
+                background: #26a697;
+                border-width: 1px;
+                border-color: #26a697;
+                border-radius: 5px;
+                color: #fff;
+                transition: background-color 0.5s, box-shadow 0.5s;
+                outline: none;
+            }
+            button:hover{
+                background-color: #31d1be;
+                box-shadow: 0 0 5px rgb(41, 41, 41);
+            } 
+            #usersettings{
+                position: relative;
             }
         }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f1f1f1;
+            overflow: auto;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            margin-top: 2rem;
+            border-radius: 3px;
+            a{
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+                background-color: #31d1be;
+                cursor: pointer;
+            }
+            a:hover{
+                background-color: #28b1a1;
+            }
+        }
+        .show {display: block;}
     }
-    margin: @zeromargin;
 }
