added table, changed some css

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -3,7 +3,7 @@
 *****************************************************/
 
 #mainmenu {
-    margin: 0 12rem;
+    margin: 0 auto;
     .header {
         line-height: 0.4rem;
         margin-bottom: 2rem;
@@ -15,6 +15,13 @@
         h3 {
             text-align: center;
             text-shadow: 2px 2px 5px grey;
+        }
+    }
+    table {
+        width: 100%;
+        margin-bottom: 5px;
+        th, td {
+            border: 1px solid rgb(199, 199, 199);
         }
     }
 }
