--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,27 @@
 /*****************************************************
 * Styling the main window
 *****************************************************/
-
 #mainmenu {
-    margin: 0 12rem;
+  margin: 0 auto;
 }
-
 #mainmenu .header {
-    line-height: 0.4rem;
-    margin-bottom: 2rem;
+  line-height: 0.4rem;
+  margin-bottom: 2rem;
 }
-
 #mainmenu .header h1 {
-    text-align: center;
-    text-decoration: underline;
-    text-shadow: 2px 2px 5px grey;
+  text-align: center;
+  text-decoration: underline;
+  text-shadow: 2px 2px 5px grey;
 }
-
 #mainmenu .header h3 {
-    text-align: center;
-    text-shadow: 2px 2px 5px grey;
+  text-align: center;
+  text-shadow: 2px 2px 5px grey;
+}
+#mainmenu table {
+  width: 100%;
+  margin-bottom: 5px;
+}
+#mainmenu table th,
+#mainmenu table td {
+  border: 1px solid #c7c7c7;
 }
