--- a/css/less/settings.less
+++ b/css/less/settings.less
@@ -1,6 +1,4 @@
-body {
-    margin-left: 25%;
-    margin-right: 25%;
+#settingCSS {
     h2 {
         margin: 5px inherit;
         text-align: center;
