--- a/css/less/login.less
+++ b/css/less/login.less
@@ -117,6 +117,13 @@
         background: url(./images/tennis-img.jpg);
         background-size: cover;
         background-position: center center;
-        max-height: 100vh;
+        max-height: 200vh;
+    }
+
+    @media only screen and (max-width: 480px){
+        .picture {
+            display: none;
+        }
+
     }
 }
