--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,97 @@
-body {
-  margin: 0px;
+header nav {
+  display: flex;
+  margin: 2rem 0;
+  height: 2rem;
+  flex-grow: 0;
+  justify-content: space-between;
+  background-color: darkgrey;
+  padding: 0.6rem;
 }
-body div {
-  margin: 10px;
+header nav img {
+  flex: 1;
+  transform: translate(5%, -33%);
+  height: fit-content;
 }
-body div p {
-  border: 2px solid #000000;
+header nav .buttonBox {
+  flex: 9;
+  display: flex;
+  justify-content: flex-end;
 }
-body div:hover p {
-  border: 5px solid #000000;
+header nav .buttonBox button {
+  padding: 0.5em 1em;
+  margin-left: 1rem;
+  background: #26a697;
+  border-width: 1px;
+  border-color: #26a697;
+  border-radius: 5px;
+  color: #fff;
+  transition: background-color 0.5s, box-shadow 0.5s;
+  outline: none;
+}
+header nav .buttonBox button:hover {
+  background-color: #31d1be;
+  box-shadow: 0 0 5px #292929;
+}
+header nav .buttonBox #usersettings {
+  position: relative;
+}
+header nav .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  margin-top: 2rem;
+  border-radius: 3px;
+}
+header nav .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  background-color: #31d1be;
+  cursor: pointer;
+}
+header nav .dropdown-content a:hover {
+  background-color: #28b1a1;
+}
+header nav .show {
+  display: block;
+}
+#confirm-overlay {
+  display: none;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  justify-content: center;
+  align-items: center;
+}
+#confirm-overlay.active {
+  display: flex;
+}
+#confirm-flex {
+  width: 80vw;
+  text-align: center;
+  left: 10vw;
+  background-color: wheat;
+  padding: 40px;
+  box-sizing: border-box;
+  padding-top: 0;
+}
+#confirm-flex .headline {
+  text-transform: uppercase;
+  text-align: left;
+}
+#confirm-flex .text-question {
+  margin: 40px 0;
+}
+#confirm-flex button {
+  border: 0;
+  padding: 5px 15px;
+  background-color: white;
 }
