--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,42 @@ header nav .dropdown-content a:hover {
 header nav .show {
   display: block;
 }
+#confirm-overlay {
+  display: none;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  justify-content: center;
+  align-items: center;
+}
+#confirm-overlay.active {
+  display: flex;
+}
+#confirm-flex {
+  width: 80vw;
+  text-align: center;
+  left: 10vw;
+  background-color: wheat;
+  padding: 40px;
+  box-sizing: border-box;
+  padding-top: 0;
+}
+#confirm-flex .headline {
+  text-transform: uppercase;
+  text-align: left;
+}
+#confirm-flex .text-question {
+  margin: 40px 0;
+}
+#confirm-flex button {
+  border: 0;
+  padding: 5px 15px;
+  background-color: white;
+}
 #loginSite {
   font: inherit;
   border: 0;
@@ -339,7 +375,4 @@ header nav .show {
 #registerCSS .contact,
 #registerCSS .password {
   border-bottom: 1px solid gray;
-}
-td.reserved{
-  background-color: pink;
 }
