--- a/css/less/main.less
+++ b/css/less/main.less
@@ -23,5 +23,11 @@
         th, td {
             border: 1px solid rgb(199, 199, 199);
         }
+        td:not(.court) {
+            background-color: #003b0769;
+        }
+        td.reserved:not(.court){
+            background-color: rgba(125,9,0,0.71);
+        }
     }
 }
