--- a/css/style.css
+++ b/css/style.css
@@ -95,21 +95,14 @@ header nav .show {
   padding: 5px 15px;
   background-color: white;
 }
+.hiddenHeader {
+  display: none;
+}
 #loginSite {
   font: inherit;
-  border: 0;
-  margin: 0;
-  padding: 0;
   font-size: 16px;
-  vertical-align: baseline;
-  height: 100%;
   line-height: 1;
-  overflow: visible;
-  width: 100%;
-  flex-grow: 1;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: row;
+  justify-content: space-around;
 }
 #loginSite .login {
   min-height: 95vh;
@@ -205,15 +198,15 @@ header nav .show {
 }
 #loginSite .picture {
   max-width: 50%;
-  background: url(images/tennis-img.jpg) 70% 0;
+  background: url(images/tennis-img.jpg);
   background-size: cover;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  place-content: stretch flex-start;
-  height: 758px;
-  width: 695px;
-  flex-grow: 0;
+  background-position: center center;
+  max-height: 200vh;
+}
+@media only screen and (max-width: 480px) {
+  #loginSite .picture {
+    display: none;
+  }
 }
 #settingCSS {
   margin-left: 25%;
@@ -375,4 +368,16 @@ header nav .show {
 #registerCSS .contact,
 #registerCSS .password {
   border-bottom: 1px solid gray;
+}
+#editor_member_overlay {
+  display: none;
+}
+#editor_member_overlay.active {
+  display: flex;
+}
+#editor_court_overlay {
+  display: none;
+}
+#editor_court_overlay.active {
+  display: flex;
 }
