added feedback to the user and now aks the user if he wants to delete his profile via modal box

--- a/css/less/settings.less
+++ b/css/less/settings.less
@@ -27,10 +27,10 @@
             margin-top: 0.3rem;
             margin-bottom: 1rem;
             padding: 0.5rem;
-            width: 100%;
+            width: 95%;
         }
         select {
-            width: 103%;
+            width: 100%;
         }
 
         #pSaveChanges, #pChangePassword {
@@ -70,4 +70,15 @@
     .basics, .password, .role {
         border-bottom: 1px solid gray;
     }
+
+    .successfulEdit {
+        color: limegreen;
+    }
+    .failedEdit {
+        color: red;
+    }
+
+    #pCurrentPassword, #pNewPassword, #pNewPassword2 {
+        box-shadow: none;
+    } 
 }
