--- a/css/style.css
+++ b/css/style.css
@@ -241,10 +241,10 @@ header nav .show {
   margin-top: 0.3rem;
   margin-bottom: 1rem;
   padding: 0.5rem;
-  width: 100%;
+  width: 95%;
 }
 #settingCSS form select {
-  width: 103%;
+  width: 100%;
 }
 #settingCSS form #pSaveChanges,
 #settingCSS form #pChangePassword {
@@ -282,6 +282,17 @@ header nav .show {
 #settingCSS .password,
 #settingCSS .role {
   border-bottom: 1px solid gray;
+}
+#settingCSS .successfulEdit {
+  color: limegreen;
+}
+#settingCSS .failedEdit {
+  color: red;
+}
+#settingCSS #pCurrentPassword,
+#settingCSS #pNewPassword,
+#settingCSS #pNewPassword2 {
+  box-shadow: none;
 }
 /*****************************************************
 * Styling the main window
